# siebren

./: .gitignore  AGENTS.md  agents.md  bench.py  bench2.py  chessformer.py  flake.nix  perceiver_bench.py  pyproject.toml
experiments/: cudagraph_capture.py  dlpack_zero_copy.py  flake.nix  torch_cuda_graph_introspect.py  torch_stream_callback.py  torch_stream_handles.py
experiments/cudagraph_rust/: Cargo.toml  build.rs
experiments/cudagraph_rust/src/: main.rs
rust/: Cargo.toml
rust/src/: eval.rs  evaluator.rs  executor.rs  future.rs  integration_tests.rs  lib.rs  mcts.rs  py_evaluator.rs  queue.rs  replay_buffer.rs  training.rs  worker.rs
rust/src/environments/: connect4.rs  mod.rs  tictactoe.rs
src/scripts/: train.py
src/siebren/: __init__.py  export.py
src/tests/: test_all.py
