[package]
name = "siebren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "siebren"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.17.1"
pyo3 = "0.25.0"
rand = "0.9"
rand_distr = "0.5"
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt", "copy-dylibs", "download-binaries", "ndarray"] }

[dev-dependencies]
rand_chacha = "0.9"
